# nekos

./: .gdb_history  Cargo.toml  Makefile.toml  gdb.sh
.cargo/: config
.vim/: settings.json
src/: .gdb_history  .vimrc  gdt.rs  interrupts.rs  lib.rs  main.rs  prelude.rs
src/common/: once.rs
src/device/: serial.rs  vga_text.rs
src/memory/: allocator.rs  frame.rs  mapper.rs  mod.rs  page_alloc.rs
src/thread/: mod.rs  schedule.rs  thread.rs  thread_switch.rs  thread_switch.s
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
